# notion-async

./: .env.example  .gitignore  Cargo.toml  README.md
notion-async-api/: Cargo.toml  schema.sql
notion-async-api/src/: api.rs  block.rs  comment.rs  database.rs  error.rs  fetcher.rs  lib.rs  misc.rs  object.rs  page.rs  rich_text.rs  user.rs
src/: db.rs  main.rs
