[package]
name = "notion-async-api"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A notion client api, in `async` style."
homepage = "https://github.com/mindeng/notion-async"
repository = "https://github.com/mindeng/notion-async"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
async-rate-limiter = "1.1.0"
futures = "0.3.30"
thiserror = "1.0.63"
monostate = "0.1.13"

[dependencies.serde_with]
version = "3.9.0"
# features = ["chrono_0_4"]
